--- a/InterviewProject.Web/InterviewProject.csproj
+++ b/InterviewProject.Web/InterviewProject.csproj
@@ -21,6 +21,11 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\interviewproject.api.application\interviewproject.api.application.csproj" />
+    <ProjectReference Include="..\interviewproject.api.infraestructure\interviewproject.api.infraestructure.csproj" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
