Implementing API service connection
- Implementing API on weather controller and connection to service
- Implementing Swagger and all the configuration for testing
- Adding nugget libraries: Mapster for mapping objects

--- a/InterviewProject.Web/appsettings.json
+++ b/InterviewProject.Web/appsettings.json
@@ -1,8 +1,12 @@
 {
+  "WeatherAPI": {
+    "LocationSearch": "https://www.metaweather.com/api/location/search/?query=",
+    "Search": "https://www.metaweather.com/api/location/"
+  },
   "Logging": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-"AllowedHosts": "*"
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
