--- a/interviewproject.api.application/interviewproject.api.application.csproj
+++ b/interviewproject.api.application/interviewproject.api.application.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\interviewproject.api.domain\interviewproject.api.domain.csproj" />
   </ItemGroup>
 
