--- a/interviewproject.api.infraestructure/interviewproject.api.infraestructure.csproj
+++ b/interviewproject.api.infraestructure/interviewproject.api.infraestructure.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.22" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\interviewproject.api.domain\interviewproject.api.domain.csproj" />
   </ItemGroup>
 
