Implementing security with JWT
- Adding JWT Configuration
- Adding AuthenticationController to generate token
- Adding configuration to test security on swagger

--- a/InterviewProject.Web/appsettings.json
+++ b/InterviewProject.Web/appsettings.json
@@ -3,6 +3,12 @@
     "LocationSearch": "https://www.metaweather.com/api/location/search/?query=",
     "Search": "https://www.metaweather.com/api/location/"
   },
+  "JWTConfiguration": {
+    "Secret": "WeatherKeysSecret2022",
+    "ExpirationMinutes": 15,
+    "Issuer": "Weather",
+    "Audience": "https://localhost"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
